update index and material
adição da lista de exercícios da disciplina.

--- a/index.html
+++ b/index.html
@@ -201,12 +201,9 @@
                     </li>
                 </ol>
                 <ul>
-                    <!-- <li>
-                        <a href="arquivosPce/Lista_de_Exerc_cio_1___PCE.pdf">Lista de Exercícios 1</a>
-                    </li>
                     <li>
-                        <a href="arquivosPce/Lista_de_Exerc_cio_2___PCE.pdf">Lista de Exercícios 2</a>
-                    </li> -->
+                        <a href="material/Lista_de_Exerc_cios___FUP.pdf">Lista de Exercícios</a>
+                    </li>
                     <br/>
                     <a href="material.zip" download="fup_material_2020.zip"><b>Carregar Tudo!</b></a>
                 </ul>
